<resources>
    <string name="app_name">Track Me</string>
    <string name="main_activity_title">Workout Tracker</string>
    <string name="track">Track</string>
    <string name="create_routine">Create Routine</string>

    <string name="name_routine">Name Routine</string>
    <string name="enter">Enter</string>
    <string name="choose_split">Choose Split</string>
    <string name="ppl">PPL</string>
    <string name="upper_lower">Upper/Lower</string>
    <string name="full_body">Full Body</string>

    <string name="edit_view_name">Edit View Name</string>
    <string name="add_item_text">Add Item Text</string>
    <string name="item_text">Item Label</string>
    <string name="pplAddItemTextHint">Add Day Version (eg. Push v2)</string>
    <string name="upperLowerItemTextHint">Add Day Version (eg. Upper v2)</string>
    <string name="fullBodyItemTextHint">Add Day Version (eg. FullBody v2)</string>
    <string name="edit">Edit Day</string>
</resources>