<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_main"
    tools:context=".ui.routine.CreateRoutineActivity">

    <TextView
        android:id="@+id/nameRoutineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/name_routine"

        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <EditText
        android:id="@+id/routineNameEditText"
        android:layout_width="425dp"
        android:layout_height="71dp"
        android:background="@drawable/round_corner_white"
        android:focusableInTouchMode="true"
        android:imeOptions="actionDone"
        android:inputType="text"

        android:hint="@string/enter"
        android:textColorHint="@color/grey"
        android:maxLength="40"
        android:maxLines="1"
        android:textColor="@color/black"

        android:paddingStart="25dp"
        android:paddingEnd="20dp"

        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameRoutineTextView"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/choose_split"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <Button
        android:id="@+id/pplButton"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:background="@drawable/round_corner_dark"

        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/ppl"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/upperLowerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.565" />

    <Button
        android:id="@+id/upperLowerButton"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:background="@drawable/round_corner_dark"

        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/upper_lower"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.432" />

    <Button
        android:id="@+id/fullBodyButton"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:background="@drawable/round_corner_dark"

        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/full_body"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upperLowerButton"
        app:layout_constraintVertical_bias="0.238" />


</androidx.constraintlayout.widget.ConstraintLayout>